--- a/compose/Elastic/vol1/Logstash/config/logstash-sample.conf
+++ b/compose/Elastic/vol1/Logstash/config/logstash-sample.conf
@@ -1,9 +1,15 @@
 # Sample Logstash configuration for creating a simple
 # Beats -> Logstash -> Elasticsearch pipeline.
 
-input {
-  beats {
-    port => 5044
+input {input {
+  jdbc {    
+    jdbc_driver_library => "E:\ELK\logstash-7.1.1\db\ojdbc6.jar"
+    jdbc_driver_class => "Java::oracle.jdbc.driver.OracleDriver"
+    jdbc_connection_string => "jdbc:oracle:thin:@//localhost:1521/curso"
+    jdbc_user => "system"
+    jdbc_password => "123"
+    # will execute on the 0th minute of every hour every day
+    statement => "select * from v$database"
   }
 }
 
